@startuml

title __CLIENT's Class Diagram__\n

  namespace Settings {
    class Settings.Settings {
    }
  }
  

  namespace client {
    class client.Client {
    }
  }
  

  namespace client {
    class client.ClientLoggedGUI {
    }
  }
  

  namespace client {
    class client.ClientLoginGUI {
    }
  }
  

  namespace client {
    class client.ClientRMI {
    }
  }
  

  namespace client {
    class client.ClientTCP {
    }
  }
  

  namespace client {
    class client.ClientUDP {
    }
  }
  

  namespace client {
    namespace customComponents {
      interface client.customComponents.CustomTile {
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.FriendRequestTile {
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.FriendTile {
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.RichiestaSfidaTile {
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.SfidaTile {
      }
    }
  }
  

  namespace client {
    namespace customComponents {
      class client.customComponents.VerticalFlowLayout {
      }
    }
  }
  

  namespace server {
    interface server.IServerRMI {
    }
  }
  

  client.Client o-- client.ClientLoggedGUI : cloggedGUI
  client.Client o-- client.ClientLoginGUI : cloginGUI
  client.Client o-- client.ClientRMI : rmi
  client.Client o-- client.ClientTCP : tcp
  client.Client o-- client.ClientUDP : udp
  client.ClientLoggedGUI o-- client.ClientTCP : tcp
  client.ClientLoginGUI o-- client.ClientRMI : rmi
  client.ClientLoginGUI o-- client.ClientTCP : tcp
  client.ClientLoginGUI o-- client.ClientUDP : udp
  client.ClientRMI o-- server.IServerRMI : serverObject
  client.ClientTCP .up.|> java.lang.Runnable
  client.ClientUDP .up.|> java.lang.Runnable
  client.customComponents.FriendRequestTile .up.|> client.customComponents.CustomTile
  client.customComponents.FriendRequestTile -up-|> javax.swing.JPanel
  client.customComponents.FriendTile .up.|> client.customComponents.CustomTile
  client.customComponents.FriendTile -up-|> javax.swing.JPanel
  client.customComponents.RichiestaSfidaTile .up.|> client.customComponents.CustomTile
  client.customComponents.RichiestaSfidaTile -up-|> javax.swing.JPanel
  client.customComponents.SfidaTile .up.|> client.customComponents.CustomTile
  client.customComponents.SfidaTile -up-|> javax.swing.JPanel
  client.customComponents.VerticalFlowLayout .up.|> java.awt.LayoutManager
  client.customComponents.VerticalFlowLayout .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
